// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing Constants constant snampshot 1`] = `
Object {
  "breakPoints": Object {
    "large": "64rem",
    "largeOnly": Array [
      "64rem",
      "74.9375rem",
    ],
    "medium": "40rem",
    "mediumOnly": Array [
      "40rem",
      "63.9375rem",
    ],
    "smallOnly": "39.9375rem",
    "xlarge": "75rem",
    "xlargeOnly": Array [
      "75rem",
      "89.9375rem",
    ],
    "xxlarge": "90rem",
  },
  "mergeBreakpoints": [Function],
  "mergeSpacings": [Function],
  "spacing": Object {
    "lg": "1rem",
    "md": "0.5rem",
    "none": "0px",
    "sm": "0.25rem",
    "xl": "2rem",
    "xs": "0.125rem",
    "xxl": "4rem",
  },
}
`;

exports[`Spacing Constants merges breakpoints 1`] = `
Object {
  "large": "64rem",
  "largeOnly": Array [
    "64rem",
    "74.9375rem",
  ],
  "medium": "40rem",
  "mediumOnly": Array [
    "40rem",
    "63.9375rem",
  ],
  "smallOnly": "39.9375rem",
  "xlarge": "1300px",
  "xlargeOnly": Array [
    "75rem",
    "89.9375rem",
  ],
  "xxlarge": "90rem",
}
`;

exports[`Spacing Constants merges spacing 1`] = `
Object {
  "lg": "1rem",
  "md": "0.5rem",
  "none": "0px",
  "sm": "0.25rem",
  "xl": "8rem",
  "xs": "0.125rem",
  "xxl": "4rem",
}
`;
